WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314782
[AppKit Gestures] Occasional debug assert when scrolling (ASSERT(m_layerHitTestMutex.isLocked()))
https://bugs.webkit.org/show_bug.cgi?id=314782
Summary
[AppKit Gestures] Occasional debug assert when scrolling (ASSERT(m_layerHitTe...
Abrar Rahman Protyasha
Reported
2026-05-13 20:27:22 PDT
rdar://177023194
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-05-13 20:51:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64896
EWS
Comment 2
2026-05-14 10:57:08 PDT
Committed
313258@main
(7b509571d1cc): <
https://commits.webkit.org/313258@main
> Reviewed commits have been landed. Closing PR #64896 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug