Source/WebKit/UIProcess/RemoteLayerTree/RemoteScrollingTree.h
@@ -143,23 +143,6 @@ private:
 #endif
 };
 
-class RemoteLayerTreeHitTestLocker {
-public:
-    RemoteLayerTreeHitTestLocker(RemoteScrollingTree& scrollingTree)
-        : m_scrollingTree(scrollingTree)
-    {
-        m_scrollingTree->lockLayersForHitTesting();
-    }
-    
-    ~RemoteLayerTreeHitTestLocker()
-    {
-        m_scrollingTree->unlockLayersForHitTesting();
-    }
-
-private:
-    const Ref<RemoteScrollingTree> m_scrollingTree;
-};
-
 } // namespace WebKit
 
 SPECIALIZE_TYPE_TRAITS_SCROLLING_TREE(WebKit::RemoteScrollingTree, isRemoteScrollingTree());
